--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <!--超链接-->
-    <a href="https://www.baidu.com/"> 百度</a>
+    <a href="nihao.html"> 我是大帅哥</a>
     <a href="https://baidu.com"><!--链接地址-->
         <img src="1.webp" width="300px">
     </a> <!--超链接--><br>
